# macro_report

./: .Rprofile  .gitignore  environment.yml  pyproject.toml
.github/workflows/: render.yaml
Python/: etl.py
R/: data_viz.R  deps.R  etl.R  inline_data.R  load_data.R  utils.R
dados/: difusao.csv  expectativas.csv  ipca_grupos.csv
data/: classificacoes.csv  difusao.csv  expectativas.csv  ipca_cheio.csv  ipca_grupos.csv  ipca_subitems.csv  ipca_subitens.csv  meta.csv  nucleos.csv
