[tool.poetry]
name = "macro-report"
version = "0.0.1"
description = "Macroeconomic Report"
authors = ["Fernando da Silva <fernando@fortietwo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "macro_report"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
urllib3 = "^1.26.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
